# template

./: Cargo.toml
app/: Cargo.toml
app/src/: lib.rs
wasm/: Cargo.toml  build.rs
wasm/src/: lib.rs
