[workspace]
resolver = "2"

members = [
    "app", "wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[workspace.dependencies]
gstd = "1.4.2"
gear-core = "1.4.2"
gwasm-builder = { package = "gear-wasm-builder", version = "1.4.2" }
scale-info = { version = "2.10", default-features = false }
parity-scale-codec = { version = "3.6", default-features = false }
sails-idl-gen = { git = "https://github.com/gear-tech/sails" }
sails = { git = "https://github.com/gear-tech/sails" }
