[workspace]
resolver = "2"

members = [
    "app", "wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[workspace.dependencies]
gstd = "1.4.2"
gwasm-builder = { package = "gear-wasm-builder", version = "1.4.2" }
sails-idl-gen = { git = "https://github.com/gear-tech/sails" }
sails-rs = { git = "https://github.com/gear-tech/sails" }
